# advent-of-code-2022

advent-of-code-2022/: pyproject.toml
advent-of-code-2022/main/01/: day_01.py
advent-of-code-2022/main/02/: day_02.py
advent-of-code-2022/main/03/: day_03.py
advent-of-code-2022/main/04/: day_04.py
advent-of-code-2022/main/05/: day_05.py
advent-of-code-2022/main/06/: day_06.py
